syntax="proto3";

option go_package="github.com/kiran-blockchain/netxd-go-advanced/grpc-demo2/task"


package helloworld;

service Greeter{

    rpc SayHello (HellpoRequest) returns (HelloResponse);

}

message HellpoRequest{
    string name =1;
    int32 age =32;

}

message HelloResponse{

    string message=1;

}

